[package]
name = "loader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33.1"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
winapi = { version = "0.3", features = [
  "processthreadsapi", "memoryapi", "handleapi", "tlhelp32", 
  "synchapi", "winbase", "libloaderapi", "winnt"
] }
rand = "0.9.0"
